--- a/css/header.css
+++ b/css/header.css
@@ -1,51 +1,52 @@
-.cabecalho__menu-hamburguer{
+.cabeçalho__menu-hamburguer {
   width: 24px;
   height: 24px;
   background-image: url("../img/Menu.svg");
   background-repeat: no-repeat;
-  display: inline-block;
   background-position: center;
+  display: inline-block;
 }
 
-.cabecalho{
+.cabeçalho {
   background-color: var(--branco);
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   position: relative;
 }
 
-.container{
+.container {
   display: flex;
   align-items: center;
 }
 
-.container__imagem{
+.container__imagem {
   padding: 1em;
 }
 
-.lista-menu{
+.lista-menu {
   display: none;
   position: absolute;
   top: 100%;
   width: 60vw;
 }
 
-.container__botao:checked ~ .lista-menu{
+.container__botao:checked~.lista-menu {
   display: block;
 }
 
 .lista-menu__titulo,
-.lista-menu__item{
+.lista-menu__item {
   padding: 1em;
   background-color: var(--branco);
 }
 
-.lista-menu__titulo{
+.lista-menu__titulo {
   color: var(--laranja);
+  font-weight: 700;
 }
 
-.lista-menu__link{
+.lista-menu__link {
   background: var(--azul-degrade);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -53,6 +54,6 @@
   text-transform: uppercase;
 }
 
-.container__botao{
+.container__botao {
   display: none;
 }
